--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Netflix-GPT</title>
-  </head>
-  <body>
-    <div id="root">
-      <h1>root will render here</h1>
-      >
-    </div>
-
-    <script src="/src/App.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NETFLIX-GPT</title>
+</head>
+<body>
+  <div id="root"></div>
+</body>
 </html>
